# fastapi-boilerplate-lite

./: .env.test  .gitignore  README.md  conftest.py  init_db.py  pyproject.toml  pytest.ini
app/: config.py  constants.py  logger.py  main.py  run.py
app/api/example/: models.py  router.py
app/api/example/test/: example_router_tests.py  example_service_tests.py
app/api/utils/: serializer.py
app/application/: example_service.py  lock_service.py
app/application/abastract/: i_example_storage.py  i_lock_storage.py
app/application/test/: test_example_service.py
app/domain/: example_dto.py  lock_dto.py
app/infrastructure/: config.py  example_storage.py  lock_storage.py
app/infrastructure/abstract/: base_storage.py
app/infrastructure/models/: __init__.py  example_model.py  lock_model.py  safe_enum.py
app/infrastructure/tests/: conftest.py  test_example_storage.py  test_lock.py
app/infrastructure/utils/: create_postgresql_database.py
docker/local/: Dockerfile  docker-compose.yml
migrations/: env.py
